# geometric_acyclic_visitor

./: .gitignore  CMakeLists.txt  README.md
Geometry/: CMakeLists.txt
Geometry/include/Geometry/: Angle.h  Circle.h  Curved.h  Ellipse.h  Segment.h  Shape.h
Geometry/include/Geometry/Calculation/: Area.h  Circumference.h  Perimeter.h  Radius.h
Geometry/include/Geometry/Exception/: ClassInvariantViolationException.h
Geometry/include/Geometry/Measure/: Area.h  Circumference.h  Perimeter.h  Radius.h
Geometry/include/Geometry/Polygon/: Equilateral.h  Isosceles.h  Quadrilateral.h  Rectangle.h  Scalene.h  Square.h  Triangle.h
Geometry/src/: main.cpp
Geometry/src/Geometry/: Angle.cpp  Circle.cpp  Ellipse.cpp  Segment.cpp
Geometry/src/Geometry/Calculation/: Area.cpp  Circumference.cpp  Perimeter.cpp  Radius.cpp
Geometry/src/Geometry/Exception/: ClassInvariantViolationException.cpp
Geometry/src/Geometry/Measure/: Area.cpp  Circumference.cpp  Perimeter.cpp  Radius.cpp
Geometry/src/Geometry/Polygon/: Equilateral.cpp  Isosceles.cpp  Rectangle.cpp  Scalene.cpp  Square.cpp
Geometry/test/Geometry/Calculation/: AreaTest.cpp  CircumferenceTest.cpp  PerimeterTest.cpp  RadiusTest.cpp
Geometry/test/Geometry/Exception/: EquilateralTest.cpp  IsoscelesTest.cpp  RectangleTest.cpp  ScaleneTest.cpp  SquareTest.cpp
Util/: CMakeLists.txt
Util/include/Util/: Math.h  Measurable.h  Measure.h  Visitable.h  Visitor.h
Util/src/Util/: Visitor.cpp
